--- a/src/Components/PetProfileForm/style.css
+++ b/src/Components/PetProfileForm/style.css
@@ -118,7 +118,8 @@
   button:hover{
     left: 0;
     color: #fff;
-    width: 180px;
+    background-color: #054231;
+    width: 100px;
     box-shadow: 0px 0px 20px 0px  #63d3a6;
   } 
   button:focus{
