--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 * {
     padding: 0;
     margin: 0;
@@ -9,6 +10,6 @@ body {
   }
 @media (max-width: 979px) {
     body {
-      padding-top: 0px;
+      padding: 0px;
     }
   }
