--- a/src/layout/NavBar/style.css
+++ b/src/layout/NavBar/style.css
@@ -107,7 +107,7 @@
       transform: translate(0, -11px) rotate(45deg);
     }
 
-    .navlinks {
+    .nav-links-menu {
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
