--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap');
 .home-page {
-    padding-top: 100px;
+    /* padding-top: 100px; */
     /* height: 90vh; */
   display: flex;
   flex-direction: column;
