--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 * {
     padding: 0;
     margin: 0;
+    
     
 }
 body {
