--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 .home-page {
     /* padding-top: 100px; */
     /* height: 90vh; */
@@ -7,7 +9,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-family: "Sequel Sans Display";
+  font-family: "Montserrat";
   
 }
 
@@ -15,14 +17,17 @@
     display: flex;
     flex-direction: row;
     align-items:center;
+    max-width: 90vw;
+    margin-top: 5vh;
 }
 
 .welcome {
-    font-size: 10vh;
+    font-size: 8vh;
+    font-family: 'Montserrat', sans-serif;
 }
 .welcome-image {
-    height: 15vh;
-    padding-left: 5vh;
+    height: 10vh;
+    /* padding-left: 5vh; */
 }
 
 .services {
