--- a/src/Pages/ProviderPage/style.css
+++ b/src/Pages/ProviderPage/style.css
@@ -24,8 +24,8 @@
   left: 10vw;
   top: 60vh;
   transform: rotate(-10deg);
-  -webkit-animation: walk 3s linear infinite;
-  animation: /*keyframe*/walk /*duration*/3s /*transition*/linear /*repeat*/infinite;
+  /* -webkit-animation: walk 3s linear infinite; */
+  animation: walk 3s linear infinite;
 }
 .paw-print-2 {
   opacity: 0;
@@ -82,7 +82,6 @@
   animation: walk 3s linear infinite 1.5s;
 }   
 .paw-print-8 {
-    
   opacity: 0;
   position: absolute;
   left: 87vw;
@@ -91,8 +90,6 @@
   -webkit-animation: walk 3s linear infinite 1.75s;
   animation: walk 3s linear infinite 1.75s;
 }
-    
-/* walking effect animation keyframes */
     
 @-webkit-keyframes walk {
   25%  {opacity: 1;}
