--- a/src/Services/index.css
+++ b/src/Services/index.css
@@ -6,7 +6,13 @@ main {
     justify-content: center;
     margin: 0 auto;
     flex: 1;
+    font-family: 'Montserrat'
 }
+
+.all-services {
+    padding-top: 3vh;
+}
+
 .card-holder{
     display: flex;
     flex-wrap: wrap;
