--- a/src/Components/PetProfileForm/style.css
+++ b/src/Components/PetProfileForm/style.css
@@ -1,4 +1,4 @@
-  form{
+  /* form{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -102,7 +102,7 @@
     border-radius: 25px;
     border: none;
     /* background: #64d488; */
-  }
+  /* }
   .save{
     font-weight: 600;
     left: -20px;
@@ -123,4 +123,4 @@
   } 
   button:focus{
     outline: none;
-  } 
+  }  */
