--- a/src/Services/index.css
+++ b/src/Services/index.css
@@ -1,4 +1,4 @@
-
+/* 
 main {
     display: flex;
     flex-direction: column;
@@ -29,4 +29,4 @@ main {
     flex-direction: row;
     justify-content: space-around;
     max-width: 100%;
-}
+} */
