--- a/src/layout/NavBar/style.css
+++ b/src/layout/NavBar/style.css
@@ -20,13 +20,20 @@
   
   .pet-pal {
     font-family: 'Delicious Handrawn', cursive;
-    font-size: 8vh;
+    font-size: 15vh;
+    color: white;
+    z-index: 5;
     
   }
   .nav-logo {
     display: flex;
     flex-direction: row;
-    
+    padding-left: 2vw;
+    /* transform: rotate(20deg); */
+  }
+
+  .nav-image:hover {
+    background-color:#699759;
   }
 
   .navbar-list-item {
@@ -62,8 +69,13 @@
 
   .nav-image {
     height: 6vh;
-    margin-left: 0vw;
-    padding-left: 2vw;
+    /* margin-left: 0vw;
+    padding-left: 2vw; */
+    transform: rotate(20deg);
+    background-color:white;
+    border-radius: 60%  60%  60%  60%  / 60%   60%         70%  70%;
+    border-style: solid;
+    border-color: black;
   }
 
   @media screen and (max-width: 800px) {
