--- a/src/Components/PetProfileForm/style.css
+++ b/src/Components/PetProfileForm/style.css
@@ -109,7 +109,7 @@ form{
   button:hover{
     left: 0;
     color: #fff;
-    background-color: #054231;
+    background-color: #0b504f;
     /* width: 100px; */
     box-shadow: 0px 0px 20px 0px  #63d3a6;
   } 
