--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: row;
     align-items:center;
+    justify-content: center;
     max-width: 90vw;
     margin-top: 2vh;
     margin-bottom: 0vh;
@@ -35,9 +36,14 @@
 
 }
 
+.backg-dog {
+  background-image: url('../../pets.png')
+}
+
 .welcome {
     font-size: 8vh;
     font-family: 'Montserrat', sans-serif;
+    text-align: center;
 }
 .welcome-image {
     height: 10vh;
@@ -138,87 +144,5 @@ margin-bottom: 5vh;
 }
 
 
-/* 
-.welcome-and-image {
-	position: relative;
-	margin: 0;
-	line-height: 1;
-	transform: translateY(10rem);
-	animation: up 1000ms linear forwards;
-	z-index: 1;
-	text-shadow: 0px 1px 1px rgba(255,255,255,1);
-}
-.welcome-and-image::before,
-.welcome-and-image::after {
-		position: absolute;
-		content: '';
-		width: 0px;
-		height: 1px;
-		left: 0;
-		background-color: rgba(0,0,0,0.2);
-		z-index: -1;
-	}
-	
-	.welcome-and-image::before {
-		top: 0.4rem;
-		animation: draw 500ms linear 1s forwards;
-	}
-	
-	.welcome-and-image::after {
-		bottom: 0.4rem;
-		animation: draw 500ms linear 1s forwards;
-	}
-	
-
-
-.welcome-and-image{
-	font-size: 0;
-	position: relative;
-	overflow: hidden;
-	padding-bottom: 0.4rem;
-}
-
-@keyframes up {
-	
-	100% {
-		transform: translateY(0);
-	}
-}
-
-@keyframes draw {
-	
-	100% {
-		width: 100%;
-	}
-} */
-
-/* slide in animations */
-/* .welcome-image {
-    animation: slide-left 4s;
-    margin-top:0%;
-  }
-  
-  @keyframes slide-left {
-    from {
-      margin-left: 100%;
-    }
-    to {
-      margin-left: 0%;
-    }
-  }
-
-  .welcome {
-    animation: slide-right 4s;
-    margin-top:0%;
-  }
-  
-  @keyframes slide-right {
-    from {
-      margin-right: 100%;
-    }
-    to {
-      margin-right: 0%;
-    }
-  } */
 
 
