--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -4,14 +4,23 @@
 .home-page {
     /* padding-top: 100px; */
     /* height: 90vh; */
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
+  /* text-align: center; */
+  font-family: "Montserrat";
+  /* max-width: 100vw; */
+  
+}
+
+.backg-dog {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  font-family: "Montserrat";
   max-width: 100vw;
-  
+
 }
 
 .welcome-and-image {
@@ -30,14 +39,91 @@
 .line {
   content:" ";
   height: 2px;
-  width: 60vw;
+  width: 50vw;
   background-color:#699759;
   margin-bottom: 1vh;
 
 }
 
-.backg-dog {
-  background-image: url('../../pets.png')
+@media screen and (min-width: 800px) {
+  .backg-dog {
+    background-image: url('../../background.png');
+    background-repeat:no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding-bottom: 10vh;
+    padding-right: 5vw;
+  }
+  .buttons-home {
+    padding-right: 5vw;
+  }
+
+  .link-and-dog {
+    display: flex;
+    flex-direction: row;
+  }
+  .home-links {
+    padding-right: 5vw;
+    padding-top: 5vh;
+
+  }
+
+  .dog-pic {
+    display: none;
+  }
+
+  .home-page em {
+    color: white;
+  }
+  .descriptions {
+    display: flex;
+    flex-direction: column;
+    /* max-width: 40vw; */
+    padding-right: 2vw;
+    padding-bottom: 2vh;
+    background-color:#68975952;
+  }
+  .owners, .providers{
+    display: flex;
+    flex-direction: column;
+    text-align: end;
+  }
+  .description {
+    max-width:  40vw;
+    text-align: end;
+    color: white;
+    padding-top: 1vh;
+  }
+
+}
+
+@media screen and (max-width: 800px) {
+  .description {
+    width: 40vw;
+    text-align:left;
+    font-size: 2vh;
+  }
+  .descriptions {
+    display: none;
+    /* display: flex;
+    flex-direction: row;
+    max-width: 90vw;
+    text-align: center;
+    justify-content: space-between;
+    padding-bottom: 2vh; */
+  }
+  .owners, .providers{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+  }
+  .owners {
+    padding-right: 3vw;
+  }
+
 }
 
 .welcome {
@@ -73,31 +159,31 @@
   top: 0%;
    left: 0vw; 
 } */
-.link-and-dog {
+/* .link-and-dog {
   display: flex;
   width: 100vw;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-end;
   
+} */
+
+.home-page h3 {
+  padding-top: 2vh;
+  color: #1746a2;
 }
 
-.find-service{
-  /* justify-content:center; */
-  /* margin-left: auto; */
-  align-self: center;
-
-}
 
 .dog-pic {
-  position: absolute;
+  /* position: absolute;
   height: 20vh;
   right:5vw;
   top: 65vh;
-  z-index: 5;
+  z-index: 5; */
+  display: none;
 }
 
 .services {
-    margin-top: 8vh;
+    /* margin-top: 8vh; */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
