--- a/src/Pages/ProviderPage/style.css
+++ b/src/Pages/ProviderPage/style.css
@@ -12,8 +12,7 @@
 .pad {
     width: 8vw;
     height: 9vw;
-    /* background-color: #654321;
-    border-radius: 60%  60%  60%  60%  / 60%   60%         70%  70%; */
+   /* border-radius: 60%  60%  60%  60%  / 60%   60%         70%  70%; */
     display: block;
     position: absolute;
 }       
@@ -22,8 +21,8 @@
   opacity: 0;
   position: absolute;
   left: 10vw;
-  top: 60vh;
-  transform: rotate(-10deg);
+  top: 70vh;
+  transform: rotate(5deg);
   /* -webkit-animation: walk 3s linear infinite; */
   animation: walk 3s linear infinite;
 }
@@ -31,26 +30,26 @@
   opacity: 0;
   position: absolute;
   left: 25vw;
-  top: 55vh;
-  transform: rotate(20deg); 
+  top: 63vh;
+  transform: rotate(30deg); 
   -webkit-animation: walk 3s linear infinite 0.25s;
-  animation: walk 3s linear infinite /*delay*/0.25s;
+  animation: walk 3s linear infinite 0.25s;
 }
 .paw-print-3 {
   opacity: 0;
   position: absolute;
-  left: 30vw;
-  top: 45vh;
-  transform: rotate(-10deg); 
+  left: 33vw;
+  top: 47vh;
+  transform: rotate(2deg); 
   -webkit-animation: walk 3s linear infinite 0.5s;
   animation: walk 3s linear infinite 0.5s;
 }     
 .paw-print-4 {
   opacity: 0;
   position: absolute;
-  left: 40vw;
-  top: 50vh;
-  transform: rotate(20deg); 
+  left: 43vw;
+  top: 57vh;
+  transform: rotate(25deg); 
   -webkit-animation: walk 3s linear infinite 0.75s;
   animation: walk 3s linear infinite 0.75s;
 }    
@@ -67,7 +66,7 @@
   opacity: 0;
   position: absolute;
   left: 65vw;
-  top: 40vh;
+  top: 45vh;
   transform: rotate(40deg); 
   -webkit-animation: walk 3s linear infinite 1.25s;
   animation: walk 3s linear infinite 1.25s;
