--- a/src/Components/PetProfileForm/style.css
+++ b/src/Components/PetProfileForm/style.css
@@ -120,3 +120,15 @@ form{
   #specialInfo {
     height: 10vh;
   }
+textarea{
+  border-radius: 15px;
+  padding-top: 5px;
+  padding-left: 5px;
+  font-family: 'Montserrat';
+  border: 1px solid #b7b7b7;
+  
+}
+input, select, textarea {
+  font-weight: 200;
+  font-size: 15px;
+}
