--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,13 @@
     
 }
 body {
-    /* padding-top: 60px; */
+    padding-top: 8vh;
     background: #CFE1EE;
   }
 @media (max-width: 979px) {
     body {
-      padding: 0px;
+      /* padding: 0px; */
+      padding-top: 8vh;
     }
   }
 
