--- a/src/Components/PetProfileForm/style.css
+++ b/src/Components/PetProfileForm/style.css
@@ -109,9 +109,9 @@ form{
   button:hover{
     left: 0;
     color: #fff;
-    background-color: #0b504f;
-    /* width: 100px; */
-    box-shadow: 0px 0px 20px 0px  #63d3a6;
+    background-color: #3fa1a9;
+    /* width: 100px; #0b504f*/
+    box-shadow: 0px 0px 20px 0px  #CFE1EE;
   } 
   button:focus{
     outline: none;
