--- a/src/Services/index.css
+++ b/src/Services/index.css
@@ -4,9 +4,11 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     flex: 1;
-    font-family: 'Montserrat'
+    font-family: 'Montserrat';
+    text-align: center;
+    max-width: 100vw;
 }
 
 .all-services {
@@ -16,7 +18,7 @@ main {
 .card-holder{
     display: flex;
     flex-wrap: wrap;
-    max-width: 100%;
+    /* max-width: 100%; */
     justify-content: flex-start;
 }
 .prov-card {
