--- a/src/Signup/style.css
+++ b/src/Signup/style.css
@@ -3,6 +3,7 @@
     flex-direction: column; */
     align-items: center;
     text-align: center;
+    flex-wrap: wrap;
 }
 
 .which-signup h1 {
@@ -19,9 +20,21 @@
     padding-bottom: 1vh;
 }
 
-.which-signup .clicked {
-    color: #fff;
-    background-color: #0b504f;
+@media screen and (max-width: 800px) {
+    .clicked, .not-clicked {
+        font-size: 2.5vh;
+   
+    }
+    .which-signup h1 {
+        padding-top: 3vh;
+    }
+}
+
+
+.clicked {
+    /* color: #fff; */
+    border-style:groove;
+    border-color: #3fa1a9;
     /* width: 100px; */
-    box-shadow: 0px 0px 20px 0px  #63d3a6;
+    /* box-shadow: 0px 0px 20px 0px  #63d3a6; */
 }
