--- a/src/Services/index.css
+++ b/src/Services/index.css
@@ -41,3 +41,20 @@ main {
 width: 400px;
 border: solid 1px black;
 }
+.calendar{
+    width: 500px;
+    height: 500px;
+}
+.fc-daygrid-body .fc-daygrid-body-unbalanced{
+    width: 100%;
+}
+.fc-scrollgrid-sync-table{
+    width: 100%;
+}
+.fc-col-header{
+    width: 100%;
+}
+
+.fc .fc-daygrid-day-top{
+    justify-content: left;
+}
