--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -67,7 +67,18 @@
   }
   .home-links {
     padding-right: 5vw;
-    padding-top: 5vh;
+    padding-top: 3vh;
+  }
+  
+  .message-button-div {
+    
+    position: fixed;
+    bottom: 1vh;
+    left: 2vw;
+    
+  }
+  .message-button {
+    height: 10vh;
   }
 
   .dog-pic {
@@ -84,6 +95,8 @@
     padding-right: 2vw;
     padding-bottom: 2vh;
     background-color:#68975952;
+   
+    
   }
   .owners, .providers{
     display: flex;
@@ -128,6 +141,27 @@
   }
   .owners {
     padding-right: 3vw;
+  }
+  .link-and-dog {
+    font-size: 1.5vh;
+    display: flex;
+    flex-direction: row;
+  }
+  .home-links {
+    padding: 2vh 3vw;
+  }
+  .message-button-div {
+    
+    position: fixed;
+    bottom: 3vh;
+    left: 4vw;
+    
+  }
+  .message-button-div h2 {
+    display: none;
+  }
+  .message-button {
+    height: 5vh;
   }
 
 }
