--- a/src/Services/index.css
+++ b/src/Services/index.css
@@ -1,25 +1,27 @@
-
-main {
+.provider-main {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    /* align-items: center;
     justify-content: center;
-    /* margin: 0 auto; */
     flex: 1;
-    font-family: 'Montserrat';
-    text-align: center;
-    max-width: 100vw;
+    max-width: 100vw; */
 }
 
 .all-services {
+text-align: left;
     padding-top: 3vh;
 }
 
+.provider-main h2 {
+    text-align: left;
+    padding-top: 2vh;
+}
 .card-holder{
     display: flex;
     flex-wrap: wrap;
     /* max-width: 100%; */
     justify-content: flex-start;
+    min-width: 40vw;
 }
 .prov-card {
     margin: 0.5rem;
@@ -40,11 +42,24 @@ main {
 }
 .map{
     height:400px;
-width: 400px;
-border: solid 1px black;
+    width: 400px;
+    border: solid 1px black;
+    justify-content: right;
 }
 
 @media screen and (max-width: 800px) {
+    
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    flex: 1;
+    font-family: 'Montserrat';
+    text-align: center;
+    max-width: 100vw;
+}
     .card-holder{
       flex-direction: column;
     }
