--- a/src/layout/NavBar/style.css
+++ b/src/layout/NavBar/style.css
@@ -79,6 +79,30 @@
     border-color: black;
   }
 
+  .message-container-navbar {
+    position: fixed;
+    margin-right: 10px;
+    bottom: 0;
+    right: 0;
+    overflow: hidden;
+    transition: height 0.5s;
+    background-color: white;
+  }
+  
+  .message-container-navbar.open {
+    height: 100px;
+    bottom: -39%;
+  }
+  
+  .message-container-navbar.closed {
+    height: 600px;
+  }
+  
+  .message-button-navbar {
+    width: 100%;
+    height: 40px;
+  }
+
   @media screen and (max-width: 800px) {
     .mobile-display{
       display: block;
