--- a/src/Components/ProviderCard/style.css
+++ b/src/Components/ProviderCard/style.css
@@ -26,6 +26,8 @@
 .details1, .details2 {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 @media screen and (max-width: 800px) {
