--- a/src/Services/index.css
+++ b/src/Services/index.css
@@ -1,8 +1,8 @@
 .provider-main {
     display: flex;
-    flex-direction: row;
-    /* align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center;
     flex: 1;
     max-width: 100vw; */
 }
