--- a/src/Pages/Register/style.css
+++ b/src/Pages/Register/style.css
@@ -12,7 +12,11 @@
 }
 
 .signup-service {
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .signup-service label {
@@ -36,4 +40,9 @@
     border-color: #3fa1a9;
     /* width: 100px; */
     /* box-shadow: 0px 0px 20px 0px  #63d3a6; */
+}
+
+.signup-form-element {
+    margin-top: 2vh;
+    padding: 2vh;
 }
