--- a/src/Components/Filters/style.css
+++ b/src/Components/Filters/style.css
@@ -5,7 +5,7 @@
 }
 
 .services-title, .animals-title {
-    background-color: #699759;
+    /* background-color: #699759; */
     border-radius: 20px;
     padding: 1vh; 
     margin: 2vw;
@@ -39,7 +39,7 @@
     border-radius: 20px;
     padding: 5vh;
     padding-top: 2vh;
-    margin: 2vw;
+    /* margin: 2vw; */
     color: white;
     text-align: center;
 }
