--- a/src/Pages/ServiceProfilePage/style.css
+++ b/src/Pages/ServiceProfilePage/style.css
@@ -1,25 +1,70 @@
 
 .provider-profile {
     display: flex;
+   
     align-items: center;
     justify-content: center;
     /* background-image: url("../../../background.png"); */
     padding-bottom: 50vh;
+    
 
 }
 
-.profile-card {
+.company-name {
+    color: black;
+}
+
+.details-and-filters {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    margin-top: 30vh;
+    border-radius: 20px;
+}
+
+.profile-page-details-holder {
+    background-color: #68975952;
+    border-radius: 0px;
+    justify-content: center;
+    margin: 1rem;
+    
+}
+
+#delete-account {
+    display: flex;
+    flex-direction: row;
+    /* align-items: right; */
+    justify-content: flex-end;
     width: 50vw;
-    height: 60vh;
+    margin-top: 2rem;
+    
+}
+
+#delete-account button {
+    font-size: 1.5vh;
+}
+
+.avail-btn {
+    margin-bottom: 5vh;
+}
+
+.profile-card {
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: 80vh;
     justify-content: center;
-    margin-top: 10vh;
+    margin-top: 5vh;
     justify-content: center;
+    background-image: url('../../../dog-bath.png');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .details-holder {
     /* list-style:none; */
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 
@@ -27,5 +72,24 @@
 }
 
 .calendar {
-    padding-left: 2vw;
+    padding-left: 4vw;
+}
+
+@media screen and (max-width: 800px) {
+    .details-and-filters {
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        margin-top: 30vh;
+        border-radius: 20px;
+    }
+
+    .user-view {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        justify-self: center;
+        text-align: center;
+        max-width: 90vw;
+      }
 }
