--- a/src/Components/ProviderCard/style.css
+++ b/src/Components/ProviderCard/style.css
@@ -4,9 +4,10 @@
 }
 
 .prov-card {
-    padding: 2vh 0vw;
+    display: flex;
+    flex-direction: row;
+    padding: 4vh 2vw;
     background-color:white;
-    
 }
 
 .service-name {
