--- a/src/Pages/ProviderPage/style.css
+++ b/src/Pages/ProviderPage/style.css
@@ -1,4 +1,14 @@
 
+.user-view {
+  display: flex;
+  flex-direction: row;
+}
+
+.user-view .prov-card {
+  margin-left: -40vw;
+  width: 40vw;
+  height: 70vh;
+}
 
 #back-btn {
   display: flex;
@@ -7,11 +17,14 @@
   justify-content: flex-start;
   width: 50vw;
   margin-top: -5rem;
+  padding-right: 5vh;
   
 }
 
 #back-btn button {
   font-size: 2vh;
+  position: fixed;
+  top: 7vh;
 }
 
 .paw-prints {
