--- a/src/Services/index.css
+++ b/src/Services/index.css
@@ -1,27 +1,38 @@
 .provider-main {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     /* justify-content: center;
     flex: 1;
     max-width: 100vw; */
 }
 
-.all-services {
-text-align: left;
-    padding-top: 3vh;
+.filters-and-results {
+    display: flex;
+    flex-direction: row;
 }
 
-.provider-main h2 {
-    text-align: left;
+.which-service-title {
+    color: white;
+    text-align: center;
+    align-items: center;
+    padding-left: 2vw;
     padding-top: 2vh;
 }
+.which-service-title h2{
+    color: white;
+    text-align: center;
+    align-items: center;
+}
+
 .card-holder{
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     /* max-width: 100%; */
     justify-content: flex-start;
     min-width: 40vw;
+    padding-left: 2vw;
 }
 .prov-card {
     margin: 0.5rem;
@@ -41,10 +52,13 @@ text-align: left;
     max-width: 100%;
 }
 .map{
-    height:400px;
-    width: 400px;
+    height:90vh;
+    width: 25vw;
     border: solid 1px black;
-    justify-content: right;
+    
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
 }
 .calendar{
     width: 500px;
