--- a/src/Pages/ServiceProfilePage/style.css
+++ b/src/Pages/ServiceProfilePage/style.css
@@ -19,7 +19,7 @@
 .details-holder {
     /* list-style:none; */
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     justify-content: center;
 
