--- a/src/Components/ProviderCard/style.css
+++ b/src/Components/ProviderCard/style.css
@@ -10,6 +10,24 @@
     background-color:white;
 }
 
+.prov-card.s-p-card {
+    width: 30vw;
+    height: 15vh;
+    border-radius:0;
+    flex-wrap: wrap;
+    padding-top: 1rem;
+    padding-bottom: 5rem;
+}
+
+.s-p-card h3 {
+    font-size: 2rem;
+    padding-bottom: 1.5rem;
+}
+
+.contact-details {
+    background-color: #68975952;
+}
+
 .service-name {
     padding: 1vh 0vw;
 }
