--- a/src/Services/index.css
+++ b/src/Services/index.css
@@ -37,9 +37,9 @@
 .prov-card {
     margin: 0.5rem;
     border: 1px solid #444;
-    border-radius: 5%;
+    border-radius: 20%;
     box-shadow: 5px 5px 5px #777;
-    width: 16rem;
+    /* width: 16rem; */
     display: flex;
     flex-direction: column;
     align-items: center;
