--- a/src/layout/NavBar/style.css
+++ b/src/layout/NavBar/style.css
@@ -87,11 +87,19 @@
     overflow: hidden;
     transition: height 0.5s;
     background-color: white;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
   }
   
+  .message-heading-navbar {
+    border-bottom: 1px solid black;
+    display: flex;
+    justify-content: space-around;
+  }
+
   .message-container-navbar.open {
     height: 100px;
-    bottom: -39%;
+    bottom: -39.5%;
   }
   
   .message-container-navbar.closed {
@@ -99,9 +107,18 @@
   }
   
   .message-button-navbar {
-    width: 100%;
-    height: 40px;
+    width: 10%;
   }
+
+  /* .messages-box-navbar{
+    position: absolute;
+    top: 85px;
+    background-color: white;
+    transition: ease-in-out 0.5s;
+    min-width: 400px;
+    min-height: 500px;
+    z-index: 10;
+  } */
 
   @media screen and (max-width: 800px) {
     .mobile-display{
