add messages pop up

--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -124,6 +124,7 @@
     color: white;
     margin-top: 12vh;
     padding: 1rem;
+    font-size: 8vh;
     z-index: 100;
     background-color:#68975952;
   }
