--- a/src/Components/PetProfileForm/style.css
+++ b/src/Components/PetProfileForm/style.css
@@ -4,56 +4,15 @@ body {
 
 form{
   padding-top: 0vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
   }
-  .field{
-    margin: 5px;
-    display: flex;
-    flex-direction: column;
-    }
+
   input[type="file"] {
     display: none;
-  }
-  
-  .custom-file-upload {
-    border-radius: 50%;
-    display: inline-block;
-    position: relative;
-    padding: 6px;
-    cursor: pointer;
-    background: linear-gradient(270deg, #3fa1a9, #79f1a4);
-    margin-bottom: 25px;
-  }
-  
-  .img-wrap{
-    position: relative;
-    width: 200px;
-    height: 200px;
-    overflow: hidden;
-    border-radius: 50%;
-  }
-  .img-upload:before{
-    content: "\f093";
-    font-size: 90px;
-    position: absolute;
-    padding-top: 80px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: #63d3a6;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: #fff;
-  }
-  .img-upload:hover:before{
-   opacity: 1;
   }
   img {
     width: auto;
@@ -80,32 +39,7 @@ form{
   input::placeholder{
     color: #bebebe;
   }
-  .name{ 
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #676767;
-    max-width: 220px;
-    overflow-wrap: break-word;
-  }
-  .status{
-    text-align: center;
-    max-width: 220px;
-    overflow-wrap: break-word;
-  }
   
-  .save{
-    font-weight: 600;
-    left: -20px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    width: 20px;
-    box-shadow: 20px 0px 40px 0px  #63d3a6;
-  }
-  .edit{
-    color: #fff;
-    width: 180px;
-  }
   button:hover{
     left: 0;
     color: #fff;
@@ -126,9 +60,125 @@ textarea{
   padding-left: 5px;
   font-family: 'Montserrat';
   border: 1px solid #b7b7b7;
+  margin-left: 5px;
   
 }
 input, select, textarea {
   font-weight: 200;
   font-size: 15px;
 }
+/* label{
+  display: inline-block;
+  float: left;
+  clear: left;
+  width: 250px;
+  text-align: right;
+} */
+input, textarea{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.file-upload {
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  padding: 6px;
+  cursor: pointer;
+  margin-bottom: 25px;
+}
+.img-wrap{
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+} 
+.file-upload {
+  position: relative;
+  z-index: 1;
+  transition: transform 0.3s ease-in-out;
+}
+
+.file-upload:hover {
+  transform: scale(0.9); /* Decrease scale to zoom out */
+}
+.special-inst{
+  margin-left: 10px;
+}
+.pet-title{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+/* .img-upload:before{
+  content: "\f093";
+  font-size: 90px;
+  position: absolute;
+  padding-top: 80px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #63d3a6;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #fff;
+} */
+/* .img-upload:hover:before{
+ opacity: 1;
+} */
+img {
+  width: 100%;
+  height: auto;
+}
+/* .img-wrap .img-upload img:nth-child(2){
+  display: none;
+}
+.img-wrap .img-upload:hover img:nth-child(1){
+  display: block;
+}
+.img-wrap .img-upload:hover img:nth-child(2){
+  display: block;
+}
+.icon-img{
+  width: 700px;
+} */
+/* .file-upload{
+   position: relative;
+  width: 100%;
+  max-width: 400px;}
+.upload-icon{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .3s ease;
+  background-color: red;
+}
+.file-upload:hover .upload-icon {
+  opacity: 1;
+}
+.icon-img img{
+  color: white;
+  font-size: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.file-upload:hover{
+color: #000080;
+} */
