--- a/src/Components/PetProfileForm/style.css
+++ b/src/Components/PetProfileForm/style.css
@@ -8,7 +8,7 @@ form{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 17px;
   }
 
   input[type="file"] {
@@ -60,8 +60,6 @@ textarea{
   padding-left: 5px;
   font-family: 'Montserrat';
   border: 1px solid #b7b7b7;
-  margin-left: 5px;
-  
 }
 input, select, textarea {
   font-weight: 200;
@@ -102,7 +100,7 @@ input, textarea{
 }
 
 .file-upload:hover {
-  transform: scale(0.9); /* Decrease scale to zoom out */
+  transform: scale(1.1); /* Decrease scale to zoom out */
 }
 .special-inst{
   margin-left: 10px;
@@ -111,7 +109,14 @@ input, textarea{
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 30px;
+  margin-top: 20px;
+}
+.form-input{
+  margin-top: 9px;
+  margin-bottom: 9px;
+}
+.name-1{
+  margin-top: 15px;
 }
 
 /* .img-upload:before{
