--- a/src/Components/ProviderCard/style.css
+++ b/src/Components/ProviderCard/style.css
@@ -53,6 +53,7 @@ position: absolute;
     align-content: center;
     align-items: center;
     transition: 0.5s;
+    justify-content: center;
 }
 .prov-card:hover .provider-icon{
     width: 80%;
@@ -77,7 +78,7 @@ min-height: 200px;
 
 
 .provider-icon img{
-    width: 100%;
+    width: 95%;
 }
 
 .details1{
@@ -97,5 +98,5 @@ transition: 0.5s;
     z-index: 1;
    position:absolute;
     margin-bottom: 5px;
-    border-radius: 20px;
+    border-radius: 0 0 45% 45%;
 }
