--- a/src/Services/index.css
+++ b/src/Services/index.css
@@ -45,18 +45,21 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    
 }
 
 .card-holder{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
-    /* max-width: 100%; */
-    justify-content: flex-start;
-    min-width: 40%;
-    
+    width: 52vw;
+    max-width: 100%; 
+     justify-content: flex-start;
+    /* min-width: 40%; */
+    margin-left: 10vw;
     margin-top: 1rem;
-}
+} 
 
 .prov-card {
     margin: 0.5rem;
@@ -69,8 +72,9 @@
     align-items: center;
     flex-shrink: 0;
     position: relative;
-    height: 200px;
-    margin-top: 100px;
+    height: 25vh;
+    width: 20vw;
+    margin-top: 13vh;
     transition: 0.5s;
     justify-content: flex-end;
     max-width: 300px;
